--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.30.4",
+		"@types/d3": "^7.4.3",
 		"svelte": "^4.2.19",
-		"vite": "^4.3.0"
+		"typescript": "^5.8.3",
+		"vite": "^4.5.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"d3": "^7.9.0"
+	}
 }
